Update: project-details

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     Hi Everyone!!
     <h1>Website coming soon!!!!</h1>
+    <h1>I have worked on some app that will be here tommorow</h1>
 </body>
 </html>
